--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <tr>
                             <td>
                                 <center>
-                                    <a title="e-attendance" href="http://172.16.13.5:8085/" target="_blank">
+                                    <a title="e-attendance" href="www.fb.com" target="_blank">
                                         <img src="e-att.png" /><br />
                                         <b>e-attendance</b></a></center>
                             </td>
@@ -79,7 +79,7 @@
                             </td>
                             <td>
                                 <center>
-                                    <a title="BackOffice_Entry" href="www.youtube.com"
+                                    <a title="BackOffice_Entry" href="https://youtube.com"
                                         target="_blank">
                                         <img src="backofficeentry.png" /><br />
                                         <b>Backoffice Entry</b></a></center>
