--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <tr>
                             <td>
                                 <center>
-                                    <a title="e-attendance" href="www.fb.com" target="_blank">
+                                    <a title="e-attendance" href="https://fb.com" target="_blank">
                                         <img src="e-att.png" /><br />
                                         <b>e-attendance</b></a></center>
                             </td>
