--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							
                             <td>
                                 <center>
-                                    <a title="Dealer Backoffice" href="http://172.16.12.3/BackOffice_Entry/userManagement/Login.aspx"
+                                    <a title="Dealer Backoffice" href="http://gmail.com"
                                         target="_blank">
                                         <img src="dealerbackoffice.png" /><br />
                                         <b> Delaer Ticker</b></a>
@@ -152,11 +152,7 @@
                     <p>
                         Below are the list of the IT personnel for your quick support:
 					</p>
-					<p>
-                        <b>Md. Abu Bakar Siddique</b><br />
-                        Head of IT<br />
-                        Ext: 138, Cell: +880 1730 738237<br />
-                    </p>
+					
 					<p>
                         <b>Md. Ahsan Kabir</b><br />
                         Deputy Manager, IT<br />
