--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 					<p>
                         <b>Md. Ahsan Kabir</b><br />
                         Deputy Manager, IT<br />
-                        Ext: 106, Cell: +880 1730 738233<br />
+                        Cell: +880 1730 738233<br />
                     </p>
                 </div>
             </div>
